# vsm-cpp-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/: Android_app.mk.in  Android_sdk.mk.in  Application.mk.in
cmake/: sdk_common.cmake  unittestpp.cmake  ut.cmake
cmake/ugcs/: common.cmake  unittestpp.cmake  ut.cmake  vsm.cmake
doc/: conf.py  default.conf  doxyrest-config.lua  header.tex  layout.xml
doc/diagrams/: async_workflow.uml  sdk_high_level.uml
doc/examples/: CMakeLists.txt  async_workflow.cpp
doc/examples/Hello_world_VSM/: CMakeLists.txt  hello_world_vsm.cpp
doc/pages/: building.dox  examples.dox  home.dox  licence.dox  license.dox  main.dox  ucs_vsm_commands.dox  ucs_vsm_fields.dox  ucs_vsm_overview.dox  ucs_vsm_protocol.dox  ucs_vsm_telemetry.dox  ucs_vsm_vehicle_registration.dox  ucs_vsm_wire_format.dox
doc/pages/manual/: manual.dox  service_discovery.dox
doc/pages/manual/protocol/: ucs_vsm_commands.dox  ucs_vsm_fields.dox  ucs_vsm_proto.dox  ucs_vsm_protocol.dox  ucs_vsm_protocol_examples.dox  ucs_vsm_telemetry.dox  ucs_vsm_wire_format.dox
doc/pages/overview/: overview.dox
doc/pages/tutorials/: async_programming.dox  hello_world_vsm.dox  tutorials.dox  vehicle_interface.dox
include/platform/android/: glob.h
include/ugcs/vsm/: action.h  actions.h  adsb_frame.h  adsb_report.h  adsb_vehicle.h  android_serial_processor.h  callback.h  camera_control_action.h  camera_series_by_distance_action.h  camera_series_by_time_action.h  camera_trigger_action.h  change_speed_action.h  clear_all_missions.h  coordinates.h  crash_handler.h  crc32.h  cucs_processor.h  debug.h  deelx.h  defs.h  device.h  endian.h  enum_set.h  exception.h  file_processor.h  heading_action.h  hid_processor.h  http_parser.h  io_buffer.h  io_request.h  io_stream.h  java.h  landing_action.h  log.h  math.h  mavlink.h  mavlink_decoder.h  mavlink_demuxer.h  mavlink_encoder.h  mavlink_stream.h  (+57 more)
include/vsm/: action.h  actions.h  adsb_frame.h  adsb_report.h  callback.h  camera_control_action.h  camera_trigger_action.h  change_speed_action.h  clear_all_missions.h  coordinates.h  crash_handler.h  cucs_processor.h  debug.h  deelx.h  endian.h  exception.h  file_processor.h  heading_action.h  hid_processor.h  io_buffer.h  io_request.h  io_stream.h  landing_action.h  log.h  mavlink.h  mavlink_decoder.h  mavlink_demuxer.h  mavlink_encoder.h  mavlink_stream.h  move_action.h  operation_waiter.h  optional.h  panorama_action.h  param_setter.h  payload_steering_action.h  piped_request_waiter.h  platform.h  platform_sockets.h  poi_action.h  properties.h  (+38 more)
make/: common.cmake  create_builds.cmake  unittestpp.cmake  ut.cmake  vsm.cmake
resources/UML/: classes_diagram.uml  threads.uml
resources/configuration/: vsm.conf
resources/mavlink/: acsl.xml  ardupilotmega.xml  common.xml  mavschema.xsd  sensyn.xml  sphengineering.xml  ugcs.xml
resources/mavlink/message_definitions/v1.0/: common.xml  (+1 more)
resources/protobuf/: test.proto  test2.proto  ucs_vsm.proto  ucs_vsm_built_ins.xml  ucs_vsm_defs.proto
src/: adsb_frame.cpp  adsb_report.cpp  adsb_vehicle.cpp  camera_trigger_action.cpp  coordinates.cpp  crash_handler.cpp  crc32.cpp  cucs_processor.cpp  device.cpp  exception.cpp  file_processor.cpp  hid_processor.cpp  http_parser.cpp  io_buffer.cpp  io_stream.cpp  log.cpp  main.cpp  mavlink.cpp  mavlink_decoder.cpp  mavlink_demuxer.cpp  mavlink_encoder.cpp  mavlink_stream.cpp  operation_waiter.cpp  panorama_action.cpp  peripheral_device.cpp  peripheral_message.cpp  piped_request_waiter.cpp  properties.cpp  property.cpp  quaternion.cpp  request.cpp  request_container.cpp  request_waiter.cpp  request_worker.cpp  serial_processor.cpp  service_discovery_processor.cpp  shared_data.cpp  shared_mutex_file.cpp  socket_address.cpp  socket_processor.cpp  (+17 more)
src/platform/android/: android_serial_processor.cpp  glob.c  java.cpp  log.cpp  serial_processor.cpp  socket_processor.cpp
src/platform/android-linux/: log.cpp  socket_address.cpp  sockets.cpp
src/platform/android-linux-mac/: crash_handler.cpp  file_processor.cpp  hid_processor.cpp  log.cpp  poll_io_controller.cpp  posix_file_handle.cpp  run_as_service.cpp  shared_mutex_file.cpp  sockets.cpp  utils.cpp
src/platform/android-mac-win/: socket_processor.cpp
src/platform/linux/: crash_handler.cpp  file_processor.cpp  hid_processor.cpp  log.cpp  run_as_service.cpp  serial_processor.cpp  shared_memory.cpp  shared_mutex_file.cpp  shared_semaphore.cpp  socket_processor.cpp  sockets.cpp  utils.cpp
src/platform/linux-mac/: log.cpp  serial_processor.cpp  shared_memory.cpp  socket_processor.cpp
src/platform/mac/: log.cpp  serial_processor.cpp  shared_semaphore.cpp  socket_address.cpp  sockets.cpp
src/platform/unix/: file_processor.cpp  hid_processor.cpp  log.cpp  poll_io_controller.cpp  posix_file_handle.cpp  run_as_service.cpp  serial_processor.cpp  shared_memory.cpp  sockets.cpp  utils.cpp
src/platform/win/: crash_handler.cpp  file_processor.cpp  hid_processor.cpp  log.cpp  overlapped_io_controller.cpp  run_as_service.cpp  serial_processor.cpp  shared_memory.cpp  shared_mutex_file.cpp  shared_semaphore.cpp  socket_address.cpp  socket_processor.cpp  sockets.cpp  utils.cpp  vsm_hid.def  vsm_hid.h  windows_file_handle.cpp  windows_wstring.cpp
test/module/: CMakeLists.txt
test/module/mt_serial/: main.cpp
test/unit/: CMakeLists.txt  main.cpp  no_valgrind.txt  std_thread.supp  ut_action.cpp  ut_callback.cpp  ut_coordinates.cpp  ut_cucs_processor.cpp  ut_endian.cpp  ut_enum_set.cpp  ut_exception.cpp  ut_file_processor.cpp  ut_io_buffer.cpp  ut_mavlink_decoder.cpp  ut_mavlink_demuxer.cpp  ut_mavlink_message.cpp  ut_mavlink_stream.cpp  ut_operation_waiter.cpp  ut_param_setter.cpp  ut_piped_request_waiter.cpp  ut_properties.cpp  ut_reference_guard.cpp  ut_serial_processor.cpp  ut_service_discovery_processor.cpp  ut_shared_data.cpp  ut_shared_mutex_file.cpp  ut_singleton.cpp  ut_socket_processor.cpp  ut_text_stream_filter.cpp  ut_timer.cpp  ut_transport_detector.cpp  ut_udp.cpp  ut_vehicle.cpp  ut_vehicle_request.cpp
tools/: cpplint.py
tools/mavgen/: mavgen.py
(+15 files in other folders)
